@@ -1,3 +1,8 @@
+2012-12-31  Siddhesh Poyarekar  <siddhesh@redhat.com>
+
+	* sysdeps/ieee754/dbl-64/mpa.c (__mp_dbl): Favour normal
+	numbers.
+
 2012-12-30  Mike Frysinger  <vapier@gentoo.org>
 
 	* math/bits/mathcalls.h (modf): Use __nonnull.
